Controller and service methods added for the country details API calls.

--- a/country-service-app/country-service/src/main/resources/application.properties
+++ b/country-service-app/country-service/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.servlet.context-path=/country-service
+
+logging.file=country-service.log
+logging.path=logs
+logging.config=classpath:logback-spring.xml
+
+spring.jackson.deserialization.fail-on-unknown-properties=false
+
+restcountries.api.base.url=https://restcountries.com/v3.1
+restcountries.api.url.all-countries=${restcountries.api.base.url}/all
+restcountries.api.url.country-details-by-name=${restcountries.api.base.url}/name/{countryName}
 
