--- a/country-service-app/pom.xml
+++ b/country-service-app/pom.xml
@@ -13,11 +13,20 @@
     <artifactId>country-service-app</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>country-service</module>
-        <module>country-service-shared</module>
-        <module>country-service-ui</module>
-    </modules>
-
-
+	<modules>
+		<module>country-service-shared</module>
+		<module>country-service</module>
+		<module>country-service-ui</module>
+	</modules>
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+	</dependencies>
 </project>
