--- a/country-service-app/country-service-ui/src/main/resources/application.properties
+++ b/country-service-app/country-service-ui/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+server.servlet.context-path=/country-service-ui
+server.port=8081
 
+logging.file=country-service-ui.log
+logging.path=logs
+logging.config=classpath:logback-spring.xml
+
+spring.jackson.deserialization.fail-on-unknown-properties=false
+
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+countryservice.url=http://localhost:8080/country-service
+countryservice.url.all-countries=${countryservice.url}/countries
+countryservice.url.country-details-by-name=${countryservice.url}/countries/{countryName}
