--- a/country-service-app/country-service/src/main/resources/application.properties
+++ b/country-service-app/country-service/src/main/resources/application.properties
@@ -10,5 +10,7 @@ restcountries.api.base.url=https://restcountries.com/v3.1
 restcountries.api.url.all-countries=${restcountries.api.base.url}/all
 restcountries.api.url.country-details-by-name=${restcountries.api.base.url}/name/{countryName}
 
-management.endpoint.metrics.enabled=true
-management.endpoint.prometheus.enabled=true
+management.endpoints.web.exposure.include=health,heapdump,httptrace,env
+management.endpoint.health.show-details=always
+management.endpoint.health.show-components=always
+management.trace.http.enabled=true
